# llm-workspace

./: .gitignore  pytest.ini
.github/workflows/: mcp-chroma.yml  mcp-memory.yml  mcp-sse.yml
agents/langgraph/: .clinerules
agents/langgraph/memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
api/: Dockerfile  notes_rag_prompt.txt  server.py
chatbot/django/: README.md  requirements.txt
chatbot/django/accounts/: admin.py  models.py
chatbot/django/api/: admin.py  models.py  rag_pipeline.py  serializers.py  urls.py  views.py
chatbot/django/api/migrations/: 0001_initial.py
chatbot/django/bot/: admin.py  consumers.py  models.py  routing.py  urls.py  views.py
chatbot/django/bot/migrations/: 0001_initial.py  0002_chatsession_is_default_title.py  0003_chatsession_is_deleted_chatsession_unique_key_and_more.py  0004_rename_message_chatmessage.py
chatbot/django/config/: asgi.py  settings.py  urls.py
chatbot/ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
chatbot/ui/src/: App.vue  main.ts  router.ts  types.ts
chatbot/ui/src/components/: ChatList.vue  ChatMessageComponent.vue  ChatSessionComponent.vue  DeleteConfirmationModal.vue  HomePage.vue  LoginForm.vue  Navbar.vue  (+3 more)
loader/notion/: .env_example  README.md  app.py  requirements.txt
mcp/chroma/: Dockerfile  README.md  pyproject.toml
mcp/chroma/src/: pyproject.toml
mcp/chroma/src/mcp_chroma/: .env_example  __init__.py  server.py
mcp/chroma/src/tests/: .env_example  test_database.py
mcp/memory/: Dockerfile  README.md  app.py  docker-compose.yaml
mcp/memory/src/: README.md  memory.ts  package-lock.json  package.json  pyproject.toml  sse.ts  stdio.ts  tsconfig.json
mcp/memory_python/src/: README.md  pyproject.toml
mcp/memory_python/src/mcp_memory_python/: app.py  server.py
mcp/memory_python/src/tests/: test_database.py
mcp/sse/: Dockerfile
mcp/sse/src/: README.md  pyproject.toml
mcp/sse/src/mcp_sse/: __init__.py  server.py
open-webui/: Dockerfile  publish.sh
open-webui/pipelines/chroma/: chroma.py
open-webui/pipelines/get_prompt_template/: get_prompt_template.py
open-webui/pipelines/rag/: requirements.txt
open-webui/pipelines/src/: requirements-dev.txt  requirements.txt
open-webui/tools/: memory_v1.py  test_memory.py
open-webui/tools/memory/: README.md  memory.ipynb  requirements-dev.txt  requirements.txt
pipelines/llamaindex/: requirements.txt
(+30 files in other folders)
