[project]
name = "mcp_chroma"
version = "0.0.1"
description = "An MCP server project to retrieve Chroma documents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
"anyio>=4.8.0",
"mcp>=1.2.0",
"chromadb>0.5.12,<0.6.0",
"langchain-chroma==0.2.0",
"langchain-ollama==0.2.2"
]
[[project.authors]]
name = "privetin"
email = ""

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[project.scripts]
mcp_chroma = "mcp_chroma:main"
